--- a/1_curve_fitting.ipynb
+++ b/1_curve_fitting.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 551,
    "outputs": [
     {
      "name": "stdout",
@@ -293,7 +293,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.Math object>",
-      "text/latex": "$\\displaystyle =  (\\frac{\\partial \\sum_{i=1}^{N}(\\hat{y_i} - y_i)^2 }{\\partial \\hat{y}}) * (\\frac{\\partial \\sum_{i=1}^{N}(m*x_i + c)}{\\partial m})$"
+      "text/latex": "$\\displaystyle =  (\\sum_{i=1}^{N} \\frac{\\partial (\\hat{y_i} - y_i)^2 }{\\partial \\hat{y_i}}) *  (\\sum_{i=1}^{N} \\frac{\\partial (m*x_i + c)}{\\partial m})$"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -301,7 +301,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.Math object>",
-      "text/latex": "$\\displaystyle =  (2 {\\sum_{i=1}^{N}(\\hat{y_i} - y_i) } * 1) * (\\frac{\\partial \\sum_{i=1}^{N}(m*x_i + c)}{\\partial m})$"
+      "text/latex": "$\\displaystyle =  (\\sum_{i=1}^{N} \\frac{\\partial (\\hat{y_i} - y_i)^2 }{\\partial \\hat{y_i}}) *  (\\sum_{i=1}^{N}x_i)$"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -309,7 +309,23 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.Math object>",
-      "text/latex": "$\\displaystyle =  2 {\\sum_{i=1}^{N}(\\hat{y_i} - y_i) } * \\sum_{i=1}^{N}x_i$"
+      "text/latex": "$\\displaystyle =  ( (\\frac{\\partial (\\hat{y_1} - y_1)^2 }{\\partial \\hat{y_1}}) + (\\frac{\\partial (\\hat{y_2} - y_2)^2 }{\\partial \\hat{y_2}}) + ... + (\\frac{\\partial (\\hat{y_N} - y_N)^2 }{\\partial \\hat{y_N}}) )*  (\\sum_{i=1}^{N}x_i)$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Math object>",
+      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)^2*\\frac{\\partial (\\hat{y_1} - y_1)}{\\partial \\hat{y_1}}) +(2*(\\hat{y_2} - y_2)^2*\\frac{\\partial (\\hat{y_2} - y_2)}{\\partial \\hat{y_2}}) +(...) +(2*(\\hat{y_N} - y_N)^2*\\frac{\\partial (\\hat{y_N} - y_N)}{\\partial \\hat{y_N}})) *  (\\sum_{i=1}^{N}x_i)$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Math object>",
+      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)^2*(\\frac{\\partial \\hat{y_1} }{\\partial \\hat{y_1}}-\\frac{\\partial \\hat{y1}}{\\partial \\hat{y_1}}) +(2*(\\hat{y_2} - y_2)^2*(\\frac{\\partial \\hat{y_2} }{\\partial \\hat{y_2}}-\\frac{\\partial \\hat{y2}}{\\partial \\hat{y_2}}) +(...) +(2*(\\hat{y_N} - y_N)^2*(\\frac{\\partial \\hat{y_N} }{\\partial \\hat{y_N}}-\\frac{\\partial \\hat{yN}}{\\partial \\hat{y_N}})) *  (\\sum_{i=1}^{N}x_i)$"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -320,9 +336,27 @@
     "print(\"We achieve it through gradient descent\")\n",
     "display(Math(r'Gradient\\ of Loss\\ w.r.t\\ m =  \\frac{\\partial Loss}{\\partial m}'))\n",
     "display(Math(r'=  (\\frac{\\partial Loss}{\\partial \\hat{y}}) * (\\frac{\\partial \\hat{y}}{\\partial m})  [Chain\\ rule]'))\n",
-    "display(Math(r'=  (\\frac{\\partial \\sum_{i=1}^{N}(\\hat{y_i} - y_i)^2 }{\\partial \\hat{y}}) * (\\frac{\\partial \\sum_{i=1}^{N}(m*x_i + c)}{\\partial m})'))\n",
-    "display(Math(r'=  (2 {\\sum_{i=1}^{N}(\\hat{y_i} - y_i) } * 1) * (\\frac{\\partial \\sum_{i=1}^{N}(m*x_i + c)}{\\partial m})'))\n",
-    "display(Math(r'=  2 {\\sum_{i=1}^{N}(\\hat{y_i} - y_i) } * \\sum_{i=1}^{N}x_i'))"
+    "display(Math(r'=  (\\sum_{i=1}^{N} \\frac{\\partial (\\hat{y_i} - y_i)^2 }{\\partial \\hat{y_i}}) *  (\\sum_{i=1}^{N} \\frac{\\partial (m*x_i + c)}{\\partial m})'))\n",
+    "display(Math(r'=  (\\sum_{i=1}^{N} \\frac{\\partial (\\hat{y_i} - y_i)^2 }{\\partial \\hat{y_i}}) *  (\\sum_{i=1}^{N}x_i)'))\n",
+    "display(Math(r'=  ( (\\frac{\\partial (\\hat{y_1} - y_1)^2 }{\\partial \\hat{y_1}}) + (\\frac{\\partial (\\hat{y_2} - y_2)^2 }{\\partial \\hat{y_2}}) + ... + (\\frac{\\partial (\\hat{y_N} - y_N)^2 }{\\partial \\hat{y_N}}) )*  (\\sum_{i=1}^{N}x_i)'))\n",
+    "display(Math(r'=  ( '\n",
+    "             r'(2*(\\hat{y_1} - y_1)^2*\\frac{\\partial (\\hat{y_1} - y_1)}{\\partial \\hat{y_1}}) +'\n",
+    "             r'(2*(\\hat{y_2} - y_2)^2*\\frac{\\partial (\\hat{y_2} - y_2)}{\\partial \\hat{y_2}}) +'\n",
+    "             r'(...) +'\n",
+    "             r'(2*(\\hat{y_N} - y_N)^2*\\frac{\\partial (\\hat{y_N} - y_N)}{\\partial \\hat{y_N}})'\n",
+    "             r') *  (\\sum_{i=1}^{N}x_i)'))\n",
+    "display(Math(r'=  ( '\n",
+    "             r'(2*(\\hat{y_1} - y_1)^2*(\\frac{\\partial \\hat{y_1} }{\\partial \\hat{y_1}}-\\frac{\\partial \\hat{y1}}{\\partial \\hat{y_1}}) +'\n",
+    "             r'(2*(\\hat{y_2} - y_2)^2*(\\frac{\\partial \\hat{y_2} }{\\partial \\hat{y_2}}-\\frac{\\partial \\hat{y2}}{\\partial \\hat{y_2}}) +'\n",
+    "             r'(...) +'\n",
+    "             r'(2*(\\hat{y_N} - y_N)^2*(\\frac{\\partial \\hat{y_N} }{\\partial \\hat{y_N}}-\\frac{\\partial \\hat{yN}}{\\partial \\hat{y_N}})'\n",
+    "             r') *  (\\sum_{i=1}^{N}x_i)'))\n",
+    "display(Math(r'=  ( '\n",
+    "             r'(2*(\\hat{y_1} - y_1)^2*(\\frac{\\partial \\hat{y_1} }{\\partial \\hat{y_1}}-\\frac{\\partial \\hat{y1}}{\\partial \\hat{y_1}}) +'\n",
+    "             r'(2*(\\hat{y_2} - y_2)^2*(\\frac{\\partial \\hat{y_2} }{\\partial \\hat{y_2}}-\\frac{\\partial \\hat{y2}}{\\partial \\hat{y_2}}) +'\n",
+    "             r'(...) +'\n",
+    "             r'(2*(\\hat{y_N} - y_N)^2*(\\frac{\\partial \\hat{y_N} }{\\partial \\hat{y_N}}-\\frac{\\partial \\hat{yN}}{\\partial \\hat{y_N}})'\n",
+    "             r') *  (\\sum_{i=1}^{N}x_i)'))"
    ],
    "metadata": {
     "collapsed": false,
