--- a/1_curve_fitting.ipynb
+++ b/1_curve_fitting.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 563,
    "outputs": [
     {
      "name": "stdout",
@@ -317,7 +317,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.Math object>",
-      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)^2*\\frac{\\partial (\\hat{y_1} - y_1)}{\\partial \\hat{y_1}}) +(2*(\\hat{y_2} - y_2)^2*\\frac{\\partial (\\hat{y_2} - y_2)}{\\partial \\hat{y_2}}) +(...) +(2*(\\hat{y_N} - y_N)^2*\\frac{\\partial (\\hat{y_N} - y_N)}{\\partial \\hat{y_N}})) *  (\\sum_{i=1}^{N}x_i)$"
+      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)*\\frac{\\partial (\\hat{y_1} - y_1)}{\\partial \\hat{y_1}}) +(2*(\\hat{y_2} - y_2)*\\frac{\\partial (\\hat{y_2} - y_2)}{\\partial \\hat{y_2}}) +(...) +(2*(\\hat{y_N} - y_N)*\\frac{\\partial (\\hat{y_N} - y_N)}{\\partial \\hat{y_N}})) *  (\\sum_{i=1}^{N}x_i)$"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -325,7 +325,23 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.Math object>",
-      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)^2*(\\frac{\\partial \\hat{y_1} }{\\partial \\hat{y_1}}-\\frac{\\partial \\hat{y1}}{\\partial \\hat{y_1}}) +(2*(\\hat{y_2} - y_2)^2*(\\frac{\\partial \\hat{y_2} }{\\partial \\hat{y_2}}-\\frac{\\partial \\hat{y2}}{\\partial \\hat{y_2}}) +(...) +(2*(\\hat{y_N} - y_N)^2*(\\frac{\\partial \\hat{y_N} }{\\partial \\hat{y_N}}-\\frac{\\partial \\hat{yN}}{\\partial \\hat{y_N}})) *  (\\sum_{i=1}^{N}x_i)$"
+      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)*(\\frac{\\partial \\hat{y_1} }{\\partial \\hat{y_1}}-\\frac{\\partial y_1}{\\partial \\hat{y_1}}) +(2*(\\hat{y_2} - y_2)*(\\frac{\\partial \\hat{y_2} }{\\partial \\hat{y_2}}-\\frac{\\partial y_2}{\\partial \\hat{y_2}}) +(...) +(2*(\\hat{y_N} - y_N)*(\\frac{\\partial \\hat{y_N} }{\\partial \\hat{y_N}}-\\frac{\\partial y_N}{\\partial \\hat{y_N}})) *  (\\sum_{i=1}^{N}x_i)$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Math object>",
+      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)*(1-0)) +(2*(\\hat{y_2} - y_2)*(1-0)) +(...) +(2*(\\hat{y_N} - y_N)*(1-0))) *  (\\sum_{i=1}^{N}x_i)$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Math object>",
+      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)*(1-0)) +(2*(\\hat{y_2} - y_2)*(1-0)) +(...) +(2*(\\hat{y_N} - y_N)*(1-0))) *  (\\sum_{i=1}^{N}x_i)$"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -340,22 +356,28 @@
     "display(Math(r'=  (\\sum_{i=1}^{N} \\frac{\\partial (\\hat{y_i} - y_i)^2 }{\\partial \\hat{y_i}}) *  (\\sum_{i=1}^{N}x_i)'))\n",
     "display(Math(r'=  ( (\\frac{\\partial (\\hat{y_1} - y_1)^2 }{\\partial \\hat{y_1}}) + (\\frac{\\partial (\\hat{y_2} - y_2)^2 }{\\partial \\hat{y_2}}) + ... + (\\frac{\\partial (\\hat{y_N} - y_N)^2 }{\\partial \\hat{y_N}}) )*  (\\sum_{i=1}^{N}x_i)'))\n",
     "display(Math(r'=  ( '\n",
-    "             r'(2*(\\hat{y_1} - y_1)^2*\\frac{\\partial (\\hat{y_1} - y_1)}{\\partial \\hat{y_1}}) +'\n",
-    "             r'(2*(\\hat{y_2} - y_2)^2*\\frac{\\partial (\\hat{y_2} - y_2)}{\\partial \\hat{y_2}}) +'\n",
+    "             r'(2*(\\hat{y_1} - y_1)*\\frac{\\partial (\\hat{y_1} - y_1)}{\\partial \\hat{y_1}}) +'\n",
+    "             r'(2*(\\hat{y_2} - y_2)*\\frac{\\partial (\\hat{y_2} - y_2)}{\\partial \\hat{y_2}}) +'\n",
     "             r'(...) +'\n",
-    "             r'(2*(\\hat{y_N} - y_N)^2*\\frac{\\partial (\\hat{y_N} - y_N)}{\\partial \\hat{y_N}})'\n",
+    "             r'(2*(\\hat{y_N} - y_N)*\\frac{\\partial (\\hat{y_N} - y_N)}{\\partial \\hat{y_N}})'\n",
     "             r') *  (\\sum_{i=1}^{N}x_i)'))\n",
     "display(Math(r'=  ( '\n",
-    "             r'(2*(\\hat{y_1} - y_1)^2*(\\frac{\\partial \\hat{y_1} }{\\partial \\hat{y_1}}-\\frac{\\partial \\hat{y1}}{\\partial \\hat{y_1}}) +'\n",
-    "             r'(2*(\\hat{y_2} - y_2)^2*(\\frac{\\partial \\hat{y_2} }{\\partial \\hat{y_2}}-\\frac{\\partial \\hat{y2}}{\\partial \\hat{y_2}}) +'\n",
+    "             r'(2*(\\hat{y_1} - y_1)*(\\frac{\\partial \\hat{y_1} }{\\partial \\hat{y_1}}-\\frac{\\partial y_1}{\\partial \\hat{y_1}}) +'\n",
+    "             r'(2*(\\hat{y_2} - y_2)*(\\frac{\\partial \\hat{y_2} }{\\partial \\hat{y_2}}-\\frac{\\partial y_2}{\\partial \\hat{y_2}}) +'\n",
     "             r'(...) +'\n",
-    "             r'(2*(\\hat{y_N} - y_N)^2*(\\frac{\\partial \\hat{y_N} }{\\partial \\hat{y_N}}-\\frac{\\partial \\hat{yN}}{\\partial \\hat{y_N}})'\n",
+    "             r'(2*(\\hat{y_N} - y_N)*(\\frac{\\partial \\hat{y_N} }{\\partial \\hat{y_N}}-\\frac{\\partial y_N}{\\partial \\hat{y_N}})'\n",
     "             r') *  (\\sum_{i=1}^{N}x_i)'))\n",
     "display(Math(r'=  ( '\n",
-    "             r'(2*(\\hat{y_1} - y_1)^2*(\\frac{\\partial \\hat{y_1} }{\\partial \\hat{y_1}}-\\frac{\\partial \\hat{y1}}{\\partial \\hat{y_1}}) +'\n",
-    "             r'(2*(\\hat{y_2} - y_2)^2*(\\frac{\\partial \\hat{y_2} }{\\partial \\hat{y_2}}-\\frac{\\partial \\hat{y2}}{\\partial \\hat{y_2}}) +'\n",
+    "             r'(2*(\\hat{y_1} - y_1)*(1-0)) +'\n",
+    "             r'(2*(\\hat{y_2} - y_2)*(1-0)) +'\n",
     "             r'(...) +'\n",
-    "             r'(2*(\\hat{y_N} - y_N)^2*(\\frac{\\partial \\hat{y_N} }{\\partial \\hat{y_N}}-\\frac{\\partial \\hat{yN}}{\\partial \\hat{y_N}})'\n",
+    "             r'(2*(\\hat{y_N} - y_N)*(1-0))'\n",
+    "             r') *  (\\sum_{i=1}^{N}x_i)'))\n",
+    "display(Math(r'=  ( '\n",
+    "             r'(2*(\\hat{y_1} - y_1)*(1-0)) +'\n",
+    "             r'(2*(\\hat{y_2} - y_2)*(1-0)) +'\n",
+    "             r'(...) +'\n",
+    "             r'(2*(\\hat{y_N} - y_N)*(1-0))'\n",
     "             r') *  (\\sum_{i=1}^{N}x_i)'))"
    ],
    "metadata": {
