--- a/1_curve_fitting.ipynb
+++ b/1_curve_fitting.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 569,
    "outputs": [
     {
      "name": "stdout",
@@ -341,7 +341,15 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.Math object>",
-      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)*(1-0)) +(2*(\\hat{y_2} - y_2)*(1-0)) +(...) +(2*(\\hat{y_N} - y_N)*(1-0))) *  (\\sum_{i=1}^{N}x_i)$"
+      "text/latex": "$\\displaystyle =  ( (2*(\\hat{y_1} - y_1)) +(2*(\\hat{y_2} - y_2)) +(...) +(2*(\\hat{y_N} - y_N))) *  (\\sum_{i=1}^{N}x_i)$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Math object>",
+      "text/latex": "$\\displaystyle = (2 * \\sum_{i=1}^{N} (\\hat{y_i} - y_i)) *  (\\sum_{i=1}^{N}x_i)$"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -374,11 +382,12 @@
     "             r'(2*(\\hat{y_N} - y_N)*(1-0))'\n",
     "             r') *  (\\sum_{i=1}^{N}x_i)'))\n",
     "display(Math(r'=  ( '\n",
-    "             r'(2*(\\hat{y_1} - y_1)*(1-0)) +'\n",
-    "             r'(2*(\\hat{y_2} - y_2)*(1-0)) +'\n",
+    "             r'(2*(\\hat{y_1} - y_1)) +'\n",
+    "             r'(2*(\\hat{y_2} - y_2)) +'\n",
     "             r'(...) +'\n",
-    "             r'(2*(\\hat{y_N} - y_N)*(1-0))'\n",
-    "             r') *  (\\sum_{i=1}^{N}x_i)'))"
+    "             r'(2*(\\hat{y_N} - y_N))'\n",
+    "             r') *  (\\sum_{i=1}^{N}x_i)'))\n",
+    "display(Math(r'= (2 * \\sum_{i=1}^{N} (\\hat{y_i} - y_i)) *  (\\sum_{i=1}^{N}x_i)'))"
    ],
    "metadata": {
     "collapsed": false,
