--- a/3_nn.ipynb
+++ b/3_nn.ipynb
@@ -208,7 +208,7 @@
     }
    ],
    "source": [
-    "print(\"Explanation\")\n",
+    "print(\"Backpropagation\")\n",
     "display(Math(r'Gradient\\ of Loss\\ w.r.t\\ weight =  \\frac{\\partial\\ Loss}{\\partial\\ weight}'))\n",
     "display(Math(r'=  \\frac{\\partial\\ Loss}{\\partial\\ output} * \\frac{\\partial output}{\\partial\\ weight}'))\n",
     "display(Math(r'Gradient\\ of Loss\\ w.r.t\\ bias =  \\frac{\\partial\\ Loss}{\\partial\\ bias}'))\n",
@@ -247,18 +247,6 @@
     "print(\"Dependency Graph\")\n",
     "Image(filename=\"3_dep.png\")"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -320,6 +308,20 @@
    ],
    "source": [
     "Image(filename=\"3_multidep.png\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(\"More topics: Learning rate decay, different type of optimizers etc\")"
    ],
    "metadata": {
     "collapsed": false,
