--- a/3_nn.ipynb
+++ b/3_nn.ipynb
@@ -321,7 +321,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "print(\"More topics: Learning rate decay, different type of optimizers etc\")"
+    "print(\"More topics: Learning rate decay, different type of optimizers etc\")\n",
+    "print(\"Activation for non-linearity\")\n",
+    "print(\"Universal approximator\")\n",
+    "print(\"Vanishing/Exploding gradients\")\n",
+    "print(\"L1/L2 Regularization\")\n",
+    "print(\"Dropout\")\n",
+    "print(\"Batchnorm\")"
    ],
    "metadata": {
     "collapsed": false,
