--- a/4_classifier.ipynb
+++ b/4_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -101,29 +101,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output for 0: 0.040161795914173126 \n",
-      "Output for 1: -0.09824703633785248 \n",
-      "Output for 2: 0.05715511739253998 \n",
-      "Output for 3: -0.07902190089225769 \n",
-      "Output for 4: 0.08404043316841125 \n",
-      "Output for 5: 0.0476258285343647 ---(Actual)\n",
-      "Output for 6: -0.09312647581100464 \n",
-      "Output for 7: 0.008346542716026306 \n",
-      "Output for 8: -0.0012514442205429077 \n",
-      "Output for 9: -0.011150762438774109 \n"
+      "Output for 0: -0.08 \n",
+      "Output for 1: 0.05 \n",
+      "Output for 2: -0.08 \n",
+      "Output for 3: -0.12 \n",
+      "Output for 4: 0.05 \n",
+      "Output for 5: -0.11 ---(Actual)\n",
+      "Output for 6: 0.07 \n",
+      "Output for 7: 0.04 \n",
+      "Output for 8: -0.05 \n",
+      "Output for 9: -0.01 \n"
      ]
     }
    ],
    "source": [
     "model_output = model(x)\n",
     "for i in range(model_output.shape[1]):\n",
-    "    print(f\"Output for {i}: {model_output[0][i]} {'---(Actual)' if i==actual_output else ''}\")"
+    "    print(f\"Output for {i}: {model_output[0][i]:.2f} {'---(Actual)' if i==actual_output else ''}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.05\n"
+      "0.90\n"
      ]
     }
    ],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -212,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.97\n"
+      "9.79\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -244,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.11\n"
+      "0.09\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -343,13 +343,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "So, Calculated LogSoftmax for the case in concern is: -2.25\n"
+      "So, Calculated LogSoftmax for the case in concern is: -2.39\n"
      ]
     }
    ],
@@ -366,13 +366,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verify. LogSoftmax calculated by PyTorch -2.25\n"
+      "Verify. LogSoftmax calculated by PyTorch -2.39\n"
      ]
     }
    ],
@@ -390,13 +390,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "So, Calculated loss is: 2.25\n"
+      "So, Calculated loss is: 2.39\n"
      ]
     }
    ],
@@ -413,13 +413,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "So, Loss calculated by PyTorch: 2.25\n"
+      "So, Loss calculated by PyTorch: 2.39\n"
      ]
     }
    ],
